Generalize confirmation implementation

--- a/src/components/common/modalTemplate.html
+++ b/src/components/common/modalTemplate.html
@@ -12,7 +12,7 @@
 <div class="modal-footer">
   <div ng-transclude="buttons"></div>
   <div ng-if="defaultButtons">
-    <button class="btn btn-default" type="button" ng-click="$close()" translate>Yes</button>
+    <button class="btn btn-default confirm" type="button" ng-click="$close()" translate>Yes</button>
     <button class="btn btn-primary" type="button" ng-click="$dismiss('cancel')" translate>Cancel</button>
   </div>
 </div>
