Pass controller to model view
Closes #588

--- a/src/components/model/newModelPage.html
+++ b/src/components/model/newModelPage.html
@@ -2,4 +2,4 @@
   <ajax-loading-indicator></ajax-loading-indicator>
 </div>
 
-<model-view ng-if="ctrl.model" model="ctrl.model"></model-view>
+<model-view ng-if="ctrl.model" model="ctrl.model" model-controller="ctrl"></model-view>
