Pass whole model page controller as restricted subset to visualization

--- a/src/components/model/modelPage.html
+++ b/src/components/model/modelPage.html
@@ -54,8 +54,7 @@
                           selection="ctrl.selection"
                           model="ctrl.model"
                           show="ctrl.show"
-                          select-class-by-id="ctrl.selectClassById"
-                          change-notifier="ctrl"
+                          model-page-actions="ctrl"
                           selection-width="ctrl.selectionWidth"
                           float>
       </visualization-view>
