--- a/src/components/editor/visualizationView.html
+++ b/src/components/editor/visualizationView.html
@@ -8,5 +8,8 @@
     </h3>
   </div>
 
-  <class-visualization model="ctrl.model" selection="ctrl.selection" change-notifier="ctrl.changeNotifier" select-class-by-id="ctrl.selectClassById"></class-visualization>
+  <class-visualization model="ctrl.model"
+                       selection="ctrl.selection"
+                       model-page-actions="ctrl.modelPageActions">
+  </class-visualization>
 </div>
