Assign or specialize association target from visualization

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -835,6 +835,16 @@ modal-body {
       }
     }
   }
+
+  visualization-context-menu {
+
+    position: absolute;
+
+    .dropdown-menu {
+      display: inline-block;
+      position: relative;
+    }
+  }
 }
 
 visualization-view ajax-loading-indicator {
