Fix to point to vocabularies instead of concept

--- a/src/components/editor/subjectView.html
+++ b/src/components/editor/subjectView.html
@@ -51,7 +51,7 @@
 
       <div class="row" ng-if="!ctrl.entity.subject.legacy">
         <div class="col-md-12">
-          <non-editable-vocabulary vocabularies="ctrl.entity.subject" context="ctrl.model"></non-editable-vocabulary>
+          <non-editable-vocabulary vocabularies="ctrl.entity.subject.vocabularies" context="ctrl.model"></non-editable-vocabulary>
         </div>
       </div>
 
