--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -36,8 +36,19 @@
           <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
           <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
-            <h5><highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight> <span ng-show="searchResult.suggestion">({{'suggestion' | translate}})</span></h5>
-            <p>{{searchResult.vocabulary | translateLabel: ctrl.model}} <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small></p>
+            <h5>
+              <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
+              <highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight> <span ng-show="searchResult.suggestion">({{'suggestion' | translate}})</span>
+            </h5>
+
+            <div class="origin">
+              <div class="pull-left">
+                <span ng-repeat="vocabulary in searchResult.vocabularies">
+                  {{vocabulary.title | translateValue: ctrl.model}} <span ng-show="!$last">, </span>
+                </span>
+              </div>
+              <span class="pull-right" ng-if="searchResult.id.isUrl()">{{searchResult.id.url}}</span>
+            </div>
           </search-results>
         </div>
 
