Show id in concept form and link to termed

--- a/src/components/model/conceptForm.html
+++ b/src/components/model/conceptForm.html
@@ -17,6 +17,8 @@
       </div>
     </editable>
 
+    <non-editable data-title="Concept id" value="ctrl.concept.id" context="ctrl.context" link="ctrl.concept.href"></non-editable>
+
     <editable-concept-select concept="ctrl.concept.broaderConcept" data-title="Broader concept" model="ctrl.model" allow-suggestions="false"></editable-concept-select>
 
     <non-editable-vocabulary ng-if="!ctrl.concept.legacy" vocabularies="ctrl.concept.vocabularies"></non-editable-vocabulary>
