--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -36,10 +36,12 @@
           <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
           <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
-            <h5>
-              <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
-              <highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight> <span ng-show="searchResult.suggestion">({{'suggestion' | translate}})</span>
-            </h5>
+            <div>
+              <i ng-class="searchResult.glyphIconClass"></i>
+              <h5>
+                <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
+                <highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight> <span ng-show="searchResult.suggestion">({{'suggestion' | translate}})</span>
+              </h5>
 
             <div class="origin">
               <div class="pull-left">
