--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -68,11 +68,13 @@
         <input id="{{ctrl.property.internalId + 'id'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyIdentifiers" string-input="identifier" ng-trim="false" ng-model="ctrl.property.externalId" />
       </editable>
 
-      <editable data-title="Example" context="ctrl.model">
-        <code-value-input-autocomplete reference-data="ctrl.property.referenceData" context="ctrl.model">
-          <input id="{{ctrl.property.internalId + 'example attribute'}}" class="form-control" type="text" datatype-input="ctrl.property.inputType" reference-data="ctrl.property.referenceData" ng-model="ctrl.property.example" />
-        </code-value-input-autocomplete>
-      </editable>
+      <editable-multiple-data-type-input id="{{ctrl.property.internalId + 'example attribute'}}"
+                                         data-title="Example"
+                                         context="ctrl.model"
+                                         reference-data="ctrl.property.referenceData"
+                                         input-type="ctrl.property.inputType"
+                                         ng-model="ctrl.property.example">
+      </editable-multiple-data-type-input>
 
       <editable-multiple-data-type-input data-title="Allowed values" id="{{ctrl.property.internalId + 'allowedValues'}}" input-type="ctrl.property.inputType" ng-model="ctrl.property.in" reference-data="ctrl.property.referenceData" context="ctrl.model"></editable-multiple-data-type-input>
 
