--- a/src/components/editor/editableConstraint.html
+++ b/src/components/editor/editableConstraint.html
@@ -1,6 +1,6 @@
 
 <uib-accordion>
-  <uib-accordion-group is-open="ctrl.open">
+  <div uib-accordion-group is-open="ctrl.open">
     <uib-accordion-heading>
       <span accordion-chevron is-open="ctrl.open">{{'Logical constraints' | translate}}</span>
     </uib-accordion-heading>
@@ -37,5 +37,5 @@
       </div>
 
     </div>
-  </uib-accordion-group>
+  </div>
 </uib-accordion>
